clusters/core-ci/grafana-loki/admin_grafana.yaml
kind: Namespace
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=confirm
  name: grafana-loki
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  namespace: grafana-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
    spec:
      volumes:
        - name: grafana-config
          secret:
            secretName: grafana-config
            defaultMode: 420
        - name: grafana-datasources
          secret:
            secretName: grafana-datasources
            defaultMode: 420
        - name: grafana-var-lib
          persistentVolumeClaim:
            claimName: grafana-var-lib
      containers:
        - name: grafana-sso
          image: 'quay.io/vrutkovs/grafana:9.4.3'
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-var-lib
              mountPath: /var/lib/grafana
        - name: token-refresher
          args:
            - --oidc.audience=$(AUDIENCE)
            - --oidc.client-id=$(CLIENT_ID)
            - --oidc.client-secret=$(CLIENT_SECRET)
            - --oidc.issuer-url=$(ISSUER_URL)
            - --upstream.url=$(RECEIVER_URL)
            - --upstream.read-timeout=5s
            - --upstream.write-timeout=10m
          image: quay.io/observatorium/token-refresher:master-2023-04-03-2207107
          resources:
            requests:
              cpu: 1000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 4000Mi
          readinessProbe:
            httpGet:
              path: /ready
              port: 8081
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /live
              port: 8081
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1000
        runAsUser: 472
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: grafana-loki
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  namespace: grafana-loki
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  host: grafana-loki.svc.ci.openshift.org
  path: /
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
